# einrain-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
einrain_commands/: Cargo.toml
einrain_commands/src/: classes.rs  cmd_class.rs  cmd_embed.rs  cmd_help.rs  cmd_id.rs  cmd_ping.rs  cmd_register.rs  cmd_skills.rs  cmd_unregister.rs  lib.rs
einrain_commands/src/assets/classes/: aegis_fighter.json  aliases.json  blast_archer.json  spell_caster.json  twin_striker.json
einrain_config/: Cargo.toml
einrain_config/src/: config.rs  lib.rs
einrain_core/: Cargo.toml
einrain_core/src/: handlers.rs  lib.rs  listeners.rs
einrain_utils/: Cargo.toml
einrain_utils/src/: bot_data.rs  client.rs  lib.rs
src/: main.rs
