[package]
name = "einrain-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "einrain_commands",
    "einrain_config",
    "einrain_core",
    "einrain_utils",
]

[dependencies]
einrain_core = { path = "einrain_core" }

tracing = "0.1"

[dependencies.tokio]
version = "1.10.0"
features = ["macros", "rt-multi-thread"]