[package]
name = "einrain_commands"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/kangalioo/poise", rev = "747f46e" }
einrain_utils = { path = "../einrain_utils" }
serde = "1"
serde_json = "1"
lazy_static = "1.4.0"