[package]
name = "einrain_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
poise = { git = "https://github.com/kangalioo/poise", rev = "747f46e" }

einrain_commands = { path = "../einrain_commands" }
einrain_config = { path = "../einrain_config" }
einrain_utils = { path = "../einrain_utils" }